Frameworks/Gin-Web/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-web
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: gin-web
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: gin-web
        tier: service
    spec:
      containers:
      - name: gin-web
        image: "gin-web:1.0.1"
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"

        # check of gin-web is alive and healthy
        readinessProbe:
          httpGet:
            path: /ping
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /ping
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5
