Frameworks/Gin-Web/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gin-web
  namespace: ingress-nginx
  labels:
    app: gin-web
    tier: service
spec:
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: gin-web
